Fixed z-index on card lines

--- a/css/index.css
+++ b/css/index.css
@@ -275,15 +275,14 @@ header > nav .hamburger div {
   flex-direction: column;
   flex-wrap: nowrap;
   position: relative;
+  z-index: 1;
 }
 .descending-cards .card {
-  position: relative;
   background-color: #fff;
   margin-left: 6%;
   margin-right: 6%;
   padding: 3rem;
   margin-bottom: 100px;
-  z-index: 1;
 }
 .descending-cards .card:not(:last-child)::after {
   content: '';
@@ -291,7 +290,7 @@ header > nav .hamburger div {
   display: inline-block;
   height: 160px;
   border: 4px solid hsl(180, 66%, 49%);
-  z-index: 0;
+  z-index: -1;
 }
 .intro-background {
   width: 100%;
